@@ -104,6 +104,7 @@ wxMSW:
 - Allow using sizers for laying out wxMDIClientWindow (Artur Wieczorek).
 - Fix updating wxSlider background when its parent background changes.
 - Implement wxListBox::EnsureVisible() (RIVDSL).
+- Drastically improve efficiency of selecting all items in wxDataViewCtrl.
 
 wxOSX/Cocoa:
 
